added webpages for qdapDictionaries under new roxygen2 framwork

--- a/inst/web/view_data.html
+++ b/inst/web/view_data.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-<title>view_data. qdapDictionaries 0.0.3</title>
+<title>view_data. qdapDictionaries 0.0.4</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="author" content="">
 
@@ -20,7 +20,7 @@
     <div class="navbar">
   <div class="navbar-inner">
     <div class="container">
-      <a class="brand" href="#">qdapDictionaries 0.0.3</a>
+      <a class="brand" href="#">qdapDictionaries 0.0.4</a>
       <div class="nav">
         <ul class="nav">
           <li><a href="index.html"><i class="icon-home icon-white"></i> Index</a></li>
@@ -72,24 +72,30 @@ qdapDictionaries.</p>
 9  Dolch                      
 10 emoticon                   
 11 env.pol                    
-12 env.syl                    
-13 env.syn                    
-14 Fry_1000                   
-15 interjections              
-16 labMT                      
-17 Leveled_Dolch              
-18 NAMES                      
-19 NAMES_LIST                 
-20 NAMES_SEX                  
-21 negation.words             
-22 negative.words             
-23 OnixTxtRetToolkitSWL1      
-24 positive.words             
-25 preposition                
-26 SYNONYM                    
-27 Top100Words                
-28 Top200Words                
-29 Top25Words                 
+12 env.power                  
+13 env.strength               
+14 env.syl                    
+15 env.syn                    
+16 Fry_1000                   
+17 interjections              
+18 labMT                      
+19 Leveled_Dolch              
+20 NAMES                      
+21 NAMES_LIST                 
+22 NAMES_SEX                  
+23 negation.words             
+24 negative.words             
+25 OnixTxtRetToolkitSWL1      
+26 positive.words             
+27 power.words                
+28 preposition                
+29 strong.words               
+30 submit.words               
+31 SYNONYM                    
+32 Top100Words                
+33 Top200Words                
+34 Top25Words                 
+35 weak.words                 
 </div>
 </pre>
   </div>
