sent version 0.0.4 to CRAN upped version to 0.0.5

--- a/inst/web/NAMES.html
+++ b/inst/web/NAMES.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-<title>NAMES. qdapDictionaries 0.0.4</title>
+<title>NAMES. qdapDictionaries 0.0.5</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="author" content="">
 
@@ -20,7 +20,7 @@
     <div class="navbar">
   <div class="navbar-inner">
     <div class="container">
-      <a class="brand" href="#">qdapDictionaries 0.0.4</a>
+      <a class="brand" href="#">qdapDictionaries 0.0.5</a>
       <div class="nav">
         <ul class="nav">
           <li><a href="index.html"><i class="icon-home icon-white"></i> Index</a></li>
@@ -74,7 +74,7 @@ gender. Gender of the combined male/female list (M/F).
 "B" in place of overlapping (M/F) names.  </li>
 <li> pred.sex.
 Predicted gender of the names with B's in <code>gender2</code>
-repalced with the gender that had a higher <code>per.freq</code>.
+replaced with the gender that had a higher <code>per.freq</code>.
 </li>
 </ul></p>
   
