updated current version of website

--- a/inst/web/key.pol.html
+++ b/inst/web/key.pol.html
@@ -57,7 +57,7 @@
     <div class="Description">
       <h2>Description</h2>
       
-      <p>A dataset containing a polarity lookup key (see <code><a href='http://www.inside-r.org/r-doc/qdap/polarity'>polarity</a></code>).</p>
+      <p>A dataset containing a polarity lookup key (see <code><a href='http://www.inside-r.org/packages/cran/qdap/docs/polarity'>polarity</a></code>).</p>
   
     </div>
 
