--- a/inst/web/key.syn.html
+++ b/inst/web/key.syn.html
@@ -50,14 +50,14 @@
     <div class="Format">
       <h2>Format</h2>
       
-      <p>A hash keyt with words and synonyms.</p>
+      <p>A hash key with 10976 rows and 2 variables (words and synonyms).</p>
   
     </div>
 
     <div class="Description">
       <h2>Description</h2>
       
-      <p>A dataset containing a synonym lookup key (see <code>SYNONYM</code>).</p>
+      <p>A dataset containing a synonym lookup key.</p>
   
     </div>
 
