--- a/inst/web/DICTIONARY.html
+++ b/inst/web/DICTIONARY.html
@@ -80,7 +80,7 @@
       
       <p>This data set is based on the Nettalk Corpus but has some researcher
 word deletions and additions based on the needs of the
-<code>syllable_sum</code> algorithm.</p>
+<code><a href='http://www.inside-r.org/packages/cran/qdap/docs/syllabication'>syllable_sum</a></code> algorithm.</p>
   
     </div>
 
